force-app/main/default/objects/ServiceContract/fields/CAT_Date_du_premier_enregistrement__c.field-meta.xml
<CustomField>
    <fullName>CAT_Date_du_premier_enregistrement__c</fullName>
    <label>Date du premier enregistrement</label>
    <type>Date</type>
</CustomField>