force-app/main/default/objects/ServiceContract/fields/CAT_Duree_initiale_du_contrat__c.field-meta.xml
<CustomField>
    <fullName>CAT_Duree_initiale_du_contrat__c</fullName>
    <inlineHelpText>Saisir la durée du contrat en année(s)</inlineHelpText>
    <label>Durée initiale du contrat</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>