force-app/main/default/objects/ServiceContract/fields/Plan_de_prevention__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_prevention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan de prévention associé</label>
    <referenceTo>PlanDePrevention__c</referenceTo>
    <relationshipLabel>Contrats d&apos;assistance technique</relationshipLabel>
    <relationshipName>Contrats_d_assistance_technique</relationshipName>
    <type>Lookup</type>
</CustomField>