force-app/main/default/objects/ServiceContract/fields/SC_Acheteur__c.field-meta.xml
<CustomField>
    <fullName>SC_Acheteur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acheteur</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Contracts</relationshipLabel>
    <relationshipName>Service_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>