force-app/main/default/objects/ServiceContract/fields/SC_Astreinte__c.field-meta.xml
<CustomField>
    <fullName>SC_Astreinte__c</fullName>
    <label>Astreinte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>