force-app/main/default/objects/ServiceContract/fields/SC_Cde_obligatoire_pour_renouvellement__c.field-meta.xml
<CustomField>
    <fullName>SC_Cde_obligatoire_pour_renouvellement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si cette case à coche est cochée vous devez renégocier ou obtenir une commande de votre client</description>
    <inlineHelpText>Si cette case à coche est cochée vous devez renégocier ou obtenir une commande de votre client</inlineHelpText>
    <label>Commande obligatoire pour renouvellement</label>
    <type>Checkbox</type>
</CustomField>