force-app/main/default/objects/ServiceContract/fields/SC_CodeClient__c.field-meta.xml
<CustomField>
    <fullName>SC_CodeClient__c</fullName>
    <formula>Account.ACC_CodeClient__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code client</label>
    <type>Text</type>
</CustomField>