force-app/main/default/objects/ServiceContract/fields/SC_Commentaire_ECME__c.field-meta.xml
<CustomField>
    <fullName>SC_Commentaire_ECME__c</fullName>
    <label>Commentaire ECME</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>