force-app/main/default/objects/ServiceContract/fields/SC_CompteLivre__c.field-meta.xml
<CustomField>
    <fullName>SC_CompteLivre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte Livré</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contrats d&apos;assistance technique (Compte Livré)</relationshipLabel>
    <relationshipName>Contrats_d_assistance_technique1</relationshipName>
    <type>Lookup</type>
</CustomField>