force-app/main/default/objects/ServiceContract/fields/SC_ContratSuspendu__c.field-meta.xml
<CustomField>
    <fullName>SC_ContratSuspendu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrat suspendu</label>
    <type>Checkbox</type>
</CustomField>