force-app/main/default/objects/ServiceContract/fields/SC_CreancesEchues__c.field-meta.xml
<CustomField>
    <fullName>SC_CreancesEchues__c</fullName>
    <formula>SC_NomDuCompteDeFacturation__r.ACC_CreancesEchues__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ce champ indique les créances échues du compte facturé.</inlineHelpText>
    <label>Créances échues</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>