force-app/main/default/objects/ServiceContract/fields/SC_Date_de_resiliation__c.field-meta.xml
<CustomField>
    <fullName>SC_Date_de_resiliation__c</fullName>
    <label>Date de résiliation</label>
    <type>Date</type>
</CustomField>