force-app/main/default/objects/ServiceContract/fields/SC_DebutAnnee1__c.field-meta.xml
<CustomField>
    <fullName>SC_DebutAnnee1__c</fullName>
    <description>Date de début de la 1ère année du contrat</description>
    <inlineHelpText>Renseigner la date de début du contrat</inlineHelpText>
    <label>Date de début 1ère année</label>
    <type>Date</type>
</CustomField>