force-app/main/default/objects/ServiceContract/fields/SC_DonneesDAffaire__c.field-meta.xml
<CustomField>
    <fullName>SC_DonneesDAffaire__c</fullName>
    <label>Données d&apos;affaire</label>
    <length>30</length>
    <type>Text</type>
</CustomField>