force-app/main/default/objects/ServiceContract/fields/SC_IndiceDeRevision__c.field-meta.xml
<CustomField>
    <fullName>SC_IndiceDeRevision__c</fullName>
    <label>Indice de révision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Indice BW</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>