force-app/main/default/objects/ServiceContract/fields/SC_ModaliteDePaiement__c.field-meta.xml
<CustomField>
    <fullName>SC_ModaliteDePaiement__c</fullName>
    <description>Correspond à la fréquence de paiement du contrat de service</description>
    <label>Modalité de paiement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mensuel</fullName>
            </value>
            <value>
                <fullName>Trimestriel</fullName>
            </value>
            <value>
                <fullName>Annuel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>