force-app/main/default/objects/ServiceContract/fields/SC_ModeDeFacturation__c.field-meta.xml
<CustomField>
    <fullName>SC_ModeDeFacturation__c</fullName>
    <defaultValue>&quot;A échoir&quot;</defaultValue>
    <label>Mode de facturation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A échoir</fullName>
                <default>true</default>
                <label>A échoir</label>
            </value>
            <value>
                <fullName>Échu</fullName>
            </value>
            <value>
                <fullName>A l&apos;intervention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>