force-app/main/default/objects/ServiceContract/fields/SC_Montant_ERP__c.field-meta.xml
<CustomField>
    <fullName>SC_Montant_ERP__c</fullName>
    <description>Montant interfacé</description>
    <label>Montant ERP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>