force-app/main/default/objects/ServiceContract/fields/SC_MotifDePenalite__c.field-meta.xml
<CustomField>
    <fullName>SC_MotifDePenalite__c</fullName>
    <label>Motif de pénalité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pénalité contractuelle</fullName>
            </value>
            <value>
                <fullName>Niveau de service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>