force-app/main/default/objects/ServiceContract/fields/SC_MotifDeResiliation__c.field-meta.xml
<CustomField>
    <fullName>SC_MotifDeResiliation__c</fullName>
    <label>Motif de résiliation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Client mécontent, insatisfaction, sanction</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Renégocié, annulé et remplacé</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Cessation d&apos;activité, déménagement, arrêt d&apos;usine, matériel H.S.</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Concurrence, externalisaton</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Prix</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Annulation par B.W., client trop exigeant, contrat à perte, impayé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>