force-app/main/default/objects/ServiceContract/fields/SC_NAffaire__c.field-meta.xml
<CustomField>
    <fullName>SC_NAffaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Renseigner l&apos;Opportunité associée au CAT</inlineHelpText>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contrats d&apos;assistance technique</relationshipLabel>
    <relationshipName>Contrats_d_assistance_technique_opp</relationshipName>
    <type>Lookup</type>
</CustomField>