force-app/main/default/objects/ServiceContract/fields/SC_NDevis__c.field-meta.xml
<CustomField>
    <fullName>SC_NDevis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>N° devis</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Quote.OpportunityId</field>
            <operation>equals</operation>
            <valueField>$Source.SC_NAffaire__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Contrats d&apos;Assistance Technique</relationshipLabel>
    <relationshipName>Service_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>