force-app/main/default/objects/ServiceContract/fields/SC_NombredHeuresVendues__c.field-meta.xml
<CustomField>
    <fullName>SC_NombredHeuresVendues__c</fullName>
    <description>Nombres d&apos;heures vendues dans le cadre du contrat</description>
    <label>Nombre d&apos;heures vendues</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>