force-app/main/default/objects/ServiceContract/fields/SC_NomDuCompteDeFacturation__c.field-meta.xml
<CustomField>
    <fullName>SC_NomDuCompteDeFacturation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte Facturé</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contrats d&apos;assistance technique</relationshipLabel>
    <relationshipName>Contrats_d_assistance_technique</relationshipName>
    <type>Lookup</type>
</CustomField>