force-app/main/default/objects/ServiceContract/fields/SC_NumeroDeCommande__c.field-meta.xml
<CustomField>
    <fullName>SC_NumeroDeCommande__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Numéro de commande ERP</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Order.OpportunityId</field>
            <operation>equals</operation>
            <valueField>$Source.SC_NAffaire__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Contrats d&apos;assistance technique</relationshipLabel>
    <relationshipName>Contrats_d_assistance_technique</relationshipName>
    <type>Lookup</type>
</CustomField>