force-app/main/default/objects/ServiceContract/fields/SC_NumeroDuContrat__c.field-meta.xml
<CustomField>
    <fullName>SC_NumeroDuContrat__c</fullName>
    <description>Clef d&apos;identification Salesforce unique - Champ de type Numéro automatique au format &quot; CAT-{0000000} &quot; , modifié temporairement en champ de type Texte dans la cadre de la reprise de données. Ce champ devra être rétabli en type Numéro automatique lorsque la reprise de données sera terminée.</description>
    <externalId>true</externalId>
    <label>Numéro du contrat (ERP)</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>