force-app/main/default/objects/ServiceContract/fields/SC_Penalite__c.field-meta.xml
<CustomField>
    <fullName>SC_Penalite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pénalité</label>
    <type>Checkbox</type>
</CustomField>