force-app/main/default/objects/ServiceContract/fields/SC_PeriodiciteDeFacturation__c.field-meta.xml
<CustomField>
    <fullName>SC_PeriodiciteDeFacturation__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <label>Périodicité de facturation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Annuelle</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Semestrielle</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Trimestrielle</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Quadrimestrielle</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Bimestrielle</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Mensuelle</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>