force-app/main/default/objects/ServiceContract/fields/SC_Renouvellement__c.field-meta.xml
<CustomField>
    <fullName>SC_Renouvellement__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <description>Mode de  renouvellement du contrat de service client</description>
    <label>Renouvellement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Tacite reconduction</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Non renouvelable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>