force-app/main/default/objects/ServiceContract/fields/SC_Souscription__c.field-meta.xml
<CustomField>
    <fullName>SC_Souscription__c</fullName>
    <label>Souscription</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Offre globale avec matériel neuf</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>A la mise en route</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>A la fin de la garantie</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Extension, renégociation, client fidélisé</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Reconquête client, suite visite technicien, prospection</label>
            </value>
            <value>
                <fullName>A l&apos;achat</fullName>
                <isActive>false</isActive>
                <label>A l&apos;achat</label>
            </value>
            <value>
                <fullName>A l&apos;installation</fullName>
                <isActive>false</isActive>
                <label>A l&apos;installation</label>
            </value>
            <value>
                <fullName>Autre</fullName>
                <isActive>false</isActive>
                <label>Autre</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>