force-app/main/default/objects/ServiceContract/fields/SC_SousDomaine__c.field-meta.xml
<CustomField>
    <fullName>SC_SousDomaine__c</fullName>
    <label>Sous-domaine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>18</fullName>
                <label>CONTRAT LOW COST</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>CONTRATS AIR</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>CONTRATS CHAUDIÈRES</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>CONTRATS EAU</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>CONTRATS GLOBAUX</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>