force-app/main/default/objects/ServiceContract/fields/SC_Statut__c.field-meta.xml
<CustomField>
    <fullName>SC_Statut__c</fullName>
    <label>Etat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Avant projet</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Pour validation ERP</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Actif</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Suspendu</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Résilié</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Terminé</label>
            </value>
            <value>
                <fullName>Clos</fullName>
                <isActive>false</isActive>
                <label>Clos</label>
            </value>
            <value>
                <fullName>Proposition</fullName>
                <isActive>false</isActive>
                <label>Proposition</label>
            </value>
            <value>
                <fullName>Proposition gagnée</fullName>
                <isActive>false</isActive>
                <label>Proposition gagnée</label>
            </value>
            <value>
                <fullName>Proposition perdue</fullName>
                <isActive>false</isActive>
                <label>Proposition perdue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>