force-app/main/default/objects/ServiceContract/fields/SC_StockAssocie__c.field-meta.xml
<CustomField>
    <fullName>SC_StockAssocie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock associé</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location.Compte__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Contrats d&apos;assistance technique</relationshipLabel>
    <relationshipName>Contrats_d_assistance_technique</relationshipName>
    <type>Lookup</type>
</CustomField>