force-app/main/default/objects/ServiceContract/fields/SC_Taux__c.field-meta.xml
<CustomField>
    <fullName>SC_Taux__c</fullName>
    <label>Taux</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Fixe</label>
            </value>
            <value>
                <fullName>2</fullName>
                <default>true</default>
                <label>Révisable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>