force-app/main/default/objects/ServiceContract/fields/SC_TypeDeContrat__c.field-meta.xml
<CustomField>
    <fullName>SC_TypeDeContrat__c</fullName>
    <label>Type de contrat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>OPTI PREST</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>OPTI SERVICES</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>OPTI GARANTIES</label>
            </value>
            <value>
                <fullName>ABONNEMENT TELESERVICES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>