force-app/main/default/objects/ServiceContract/fields/Tech_Mouvement_Port__c.field-meta.xml
<CustomField>
    <fullName>Tech_Mouvement_Port__c</fullName>
    <description>Type de mouvement CAT : entrée ou sortie....</description>
    <formula>IF( ISPICKVAL( SC_Statut__c , &apos;3&apos;),1,-1)</formula>
    <label>Tech_Mouvement Port</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>