force-app/main/default/objects/ServiceContract/fields/Tech_Talend_Export_Contrat__c.field-meta.xml
<CustomField>
    <fullName>Tech_Talend_Export_Contrat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech Talend Export Contrat</label>
    <type>Checkbox</type>
</CustomField>