force-app/main/default/objects/ServiceContract/recordTypes/CTR_Child.recordType-meta.xml
<RecordType>
    <fullName>CTR_Child</fullName>
    <active>true</active>
    <description>Le contrat d&apos;assistance fils pour la gestion des périodes annuelles</description>
    <label>Contrat d&apos;Assistance Fils</label>
</RecordType>