force-app/main/default/objects/ServiceContract/validationRules/VR00_CAT_Plus_de_Modif_sur_Contrat_Actif.validationRule-meta.xml
<ValidationRule>
    <fullName>VR00_CAT_Plus_de_Modif_sur_Contrat_Actif</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
$User.USER_ByPassRegleValidation__c = FALSE,
OR (ISCHANGED(Name),ISCHANGED(SC_NumeroDuContrat__c)
   ,ISCHANGED(SC_SousDomaine__c),ISCHANGED(SC_Statut__c),ISCHANGED(EndDate),ISCHANGED(AccountId)
   ,ISCHANGED(ShippingAddress),ISCHANGED(SC_NomDuCompteDeFacturation__c)
   ,ISCHANGED(BillingAddress),ISCHANGED(SC_DonneesDAffaire__c),ISCHANGED(SC_NAffaire__c)
   ,ISCHANGED(SC_NumeroDeCommande__c),ISCHANGED(SC_NDevis__c),ISCHANGED(SC_Renouvellement__c)
   ,ISCHANGED(SC_PeriodiciteDeFacturation__c),ISCHANGED(SC_ModeDeFacturation__c),ISCHANGED(SC_Montant_ERP__c)
   ,ISCHANGED(SC_Taux__c),ISCHANGED(SC_IndiceDeRevision__c),ISCHANGED(SC_Souscription__c)
   ,ISCHANGED(SC_ContratSuspendu__c),ISCHANGED(SC_MotifDeResiliation__c),ISCHANGED(Tech_Talend_Export_Contrat__c)
   ) 
,ISPICKVAL(SC_Statut__c, &apos;3&apos;)  
,$User.LastName != $Label.API
, AND(NOT(ISNEW())))</errorConditionFormula>
    <errorMessage>Attention : Le contrat est signé dans GPIC, il n&apos;est plus modifiable</errorMessage>
</ValidationRule>