force-app/main/default/objects/ServiceContract/validationRules/VR01_CAT_OpportuniteServiceFermeeGagnee.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_CAT_OpportuniteServiceFermeeGagnee</fullName>
    <active>true</active>
    <description>Vous devez renseigner une opportunité de type service et à l&apos;étape &quot;Fermée gagnée&quot; pour  mettre à jour vers le statut &quot;Pour validation ERP&quot;.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(SC_Statut__c ,&quot;2&quot;),
				$User.USER_ByPassRegleValidation__c = FALSE, 
				NOT ISBLANK(SC_NAffaire__c),									
				NOT ISPICKVAL(SC_NAffaire__r.OPP_Domaine__c,&quot;4&quot;),
				NOT ISPICKVAL(SC_NAffaire__r.StageName,&quot;Fermée gagnée&quot;) 
				)</errorConditionFormula>
    <errorMessage>Vous devez renseigner une opportunité de type service et à l&apos;étape &quot;Fermée gagnée&quot; pour  mettre à jour vers le statut &quot;Pour validation ERP&quot;.</errorMessage>
</ValidationRule>