force-app/main/default/objects/ServiceContract/validationRules/VR05_CAT_SouscriptionPourValidationERP.validationRule-meta.xml
<ValidationRule>
    <fullName>VR05_CAT_SouscriptionPourValidationERP</fullName>
    <active>true</active>
    <description>Cette règle de validation permet de vérifier que le champ &quot;Souscription&quot; est bien renseigné lorsque le statut &quot;Pour validation ERP&quot; est sélectionné.</description>
    <errorConditionFormula>AND(
ISPICKVAL(SC_Statut__c,&quot;2&quot;),
$User.USER_ByPassRegleValidation__c = FALSE,
ISPICKVAL(SC_Souscription__c,&quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Vous devez renseigner le champ &quot;Souscription&quot; avant de mettre à jour au statut &quot;Pour validation ERP&quot;.</errorMessage>
</ValidationRule>