force-app/main/default/objects/ServiceContract/validationRules/VR06_CAT_NombredHeuresPourValidationERP.validationRule-meta.xml
<ValidationRule>
    <fullName>VR06_CAT_NombredHeuresPourValidationERP</fullName>
    <active>true</active>
    <description>Cette règle de validation permet de vérifier que le champ &quot;Nombre d&apos;heures vendues&quot; est bien renseigné lorsque le statut &quot;Pour validation ERP&quot; est sélectionné.</description>
    <errorConditionFormula>AND(
ISPICKVAL(SC_Statut__c ,&quot;2&quot;),
$User.USER_ByPassRegleValidation__c = FALSE,
ISBLANK(SC_NombredHeuresVendues__c)
)</errorConditionFormula>
    <errorMessage>Vous devez renseigner le champ &quot;Nombre d&apos;heures vendues&quot; avant de mettre à jour au statut &quot;Pour validation ERP&quot;.</errorMessage>
</ValidationRule>