force-app/main/default/objects/ServiceContract/validationRules/VR07_CAT_TauxPourValidationERP.validationRule-meta.xml
<ValidationRule>
    <fullName>VR07_CAT_TauxPourValidationERP</fullName>
    <active>true</active>
    <description>Cette règle de validation permet de vérifier que le champ &quot;Taux&quot; est bien renseigné lorsque le statut &quot;Pour validation ERP&quot; est sélectionné.</description>
    <errorConditionFormula>AND(
ISPICKVAL(SC_Statut__c ,&quot;2&quot;),
$User.USER_ByPassRegleValidation__c = FALSE,
ISPICKVAL(SC_Taux__c, &apos;&apos;)
)</errorConditionFormula>
    <errorMessage>Vous devez renseigner le champ &quot;Taux&quot; avant de mettre à jour au statut &quot;Pour validation ERP&quot;.</errorMessage>
</ValidationRule>