force-app/main/default/objects/ServiceContract/validationRules/VR08_MotifDeResiliationSiStatutResilie.validationRule-meta.xml
<ValidationRule>
    <fullName>VR08_MotifDeResiliationSiStatutResilie</fullName>
    <active>true</active>
    <description>Vous devez saisir un motif de résiliation pour mettre à jour le contrat au statut &quot;Résilié&quot;.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(SC_Statut__c ,&quot;5&quot;),
				$User.USER_ByPassRegleValidation__c = FALSE, 
				NOT(ISPICKVAL(SC_Renouvellement__c,&quot;1&quot;)),					
				NOT(ISPICKVAL(SC_Renouvellement__c,&quot;2&quot;)),
				NOT(ISPICKVAL(SC_Renouvellement__c,&quot;3&quot;)),
				NOT(ISPICKVAL(SC_Renouvellement__c,&quot;4&quot;)),
				NOT(ISPICKVAL(SC_Renouvellement__c,&quot;5&quot;)),
				NOT(ISPICKVAL(SC_Renouvellement__c,&quot;6&quot;))
)</errorConditionFormula>
    <errorMessage>Vous devez saisir un motif de résiliation pour mettre à jour le contrat au statut &quot;Résilié&quot;.</errorMessage>
</ValidationRule>