force-app/main/default/objects/ServiceContract/validationRules/VR_CAT_Plus_de_Modif_Pour_Contrat_Actif.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CAT_Plus_de_Modif_Pour_Contrat_Actif</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
$User.USER_ByPassRegleValidation__c = FALSE,
OR(ISCHANGED(Name),ISCHANGED(SC_NumeroDuContrat__c),ISCHANGED(SC_SousDomaine__c),ISCHANGED(SC_Statut__c),ISCHANGED(AccountId),ISCHANGED(EndDate),ISCHANGED(SC_NomDuCompteDeFacturation__c),ISCHANGED(SC_DonneesDAffaire__c), ISCHANGED(SC_NumeroDeCommande__c),ISCHANGED(SC_NDevis__c),ISCHANGED(SC_Renouvellement__c),ISCHANGED(SC_PeriodiciteDeFacturation__c),ISCHANGED(SC_ModeDeFacturation__c),ISCHANGED(SC_Montant_ERP__c),ISCHANGED(SC_Taux__c),ISCHANGED(SC_IndiceDeRevision__c),ISCHANGED(SC_Souscription__c),ISCHANGED(SC_ContratSuspendu__c),ISCHANGED(SC_MotifDeResiliation__c)), 
$User.LastName != $Label.API, 
ISPICKVAL(SC_Statut__c, &apos;3&apos;),  
AND(NOT(ISNEW())))</errorConditionFormula>
    <errorMessage>Le contrat est signé dans GPIC, il n&apos;est plus modifiable</errorMessage>
</ValidationRule>