force-app/main/default/objects/ServiceContract/listViews/All_ServiceContracts.listView-meta.xml
<ListView>
    <fullName>All_ServiceContracts</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>SC_NumeroDuContrat__c</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <columns>CONTRACT.LAST_UPDATE</columns>
    <columns>CREATEDBY_USER.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les contrats d&apos;assistance technique</label>
</ListView>