force-app/main/default/objects/ServiceContract/listViews/CONTRAT_SE_NORD_et_contacts.listView-meta.xml
<ListView>
    <fullName>CONTRAT_SE_NORD_et_contacts</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>CONTRACT.APPROVALSTATUS</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTACT.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>CONTRAT SE NORD et contacts</label>
</ListView>